--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap 模板</title>
+  <meta name="keywords" content="关键词">
+  <meta name="description" content="描述">
+  <title>BootStrap 模板</title>
   <link rel="stylesheet" href="http://libs.cncdn.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://libs.cncdn.cn/bootswatch/3.3.7/paper/bootstrap.min.css">
   <link rel="stylesheet" href="themes/main.css">
