--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="描述">
   <title>BootStrap 模板</title>
   <link rel="stylesheet" href="http://libs.cncdn.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://libs.cncdn.cn/bootswatch/3.3.7/paper/bootstrap.min.css">
+  <link rel="stylesheet" href="http://libs.cncdn.cn/bootswatch/3.3.7/flatly/bootstrap.min.css">
   <link rel="stylesheet" href="themes/main.css">
   <!--[if lt IE 9]>
   <script src="http://libs.cncdn.cn/html5shiv/3.7.3/html5shiv.min.js"></script>
