--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta name="keywords" content="关键词">
   <meta name="description" content="描述">
   <title>BootStrap 模板</title>
-  <link rel="stylesheet" href="http://libs.cncdn.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://libs.cncdn.cn/bootswatch/3.3.7/flatly/bootstrap.min.css">
+  <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="themes/main.css">
   <!--[if lt IE 9]>
-  <script src="http://libs.cncdn.cn/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="http://libs.cncdn.cn/respond.js/1.4.2/respond.min.js"></script>
-  <link id="respond-proxy" rel="respond-proxy" href="http://libs.cncdn.cn/cross-domain/respond-proxy.html">
+  <script src="http://cdn.liruan.cn/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="http://cdn.liruan.cn/respond.js/1.4.2/respond.min.js"></script>
+  <link id="respond-proxy" rel="respond-proxy" href="http://cdn.liruan.cn/cross-domain/respond-proxy.html">
   <link id="respond-redirect" rel="respond-redirect" href="cross-domain/respond.proxy.gif">
   <script src="cross-domain/respond.proxy.js"></script>
   <![endif]-->
@@ -65,7 +64,7 @@
     </div>
   </div>
 </div>
-<script src="http://libs.cncdn.cn/jquery/1.12.4/jquery.min.js"></script>
-<script src="http://libs.cncdn.cn/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="http://cdn.liruan.cn/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
