--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="描述">
   <title>BootStrap 模板</title>
   <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="themes/main.css">
   <!--[if lt IE 9]>
   <script src="http://cdn.liruan.cn/html5shiv/3.7.3/html5shiv.min.js"></script>
