--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="关键词">
   <meta name="description" content="描述">
-  <title>BootStrap 模板</title>
+  <title>Bootstrap 模板</title>
   <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="themes/main.css">
