--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Bootstrap 模板</title>
   <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://cdn.liruan.cn/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="themes/main.css">
+  <link rel="stylesheet" href="themes/styles/main.css">
   <!--[if lt IE 9]>
   <script src="http://cdn.liruan.cn/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="http://cdn.liruan.cn/respond.js/1.4.2/respond.min.js"></script>
